--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>MENU</title>
 </head>
 <body>
-    <h1>Menú para lobos BUAP</h1>
+    <h1>Menú para lobos y lobas BUAP</h1>
+    <ul>
+        <li>Agua de Horchata</li>
+        <li>Spaguetti a la bolognesa</li>
+    </ul>
 </body>
 </html>
